[package]
name = "valensas-rocket"
version = "0.1.0"
edition = "2021"
description = "A library that provides a Rocket client with the capability of metric collection for endpoints."
license = "MIT"

[dependencies]
valensas-actuator = "0.1.0"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]