[package]
name = "valensas-rocket"
version = "0.1.2"
edition = "2021"
description = "A library that provides a Rocket client with the capability of metric collection for endpoints."
license = "MIT"
repository = "https://github.com/Valensas/rocket"

[dependencies]
valensas-actuator = "0.1.3"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dev-dependencies]
tokio = "1.29.1"